Added cancel button
added an option to cancel when creating a new account

--- a/Android_App/Potato/res/layout/activity_create.xml
+++ b/Android_App/Potato/res/layout/activity_create.xml
@@ -50,4 +50,14 @@
         android:text="@string/String_CreateNewAccount" 
     	android:onClick="onClickCreateNewAccount"  />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="@string/String_Cancel" 
+        android:onClick="onClickCancel"/>
+
 </RelativeLayout>
