--- a/Android_App/Potato/res/layout/activity_login.xml
+++ b/Android_App/Potato/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
     </EditText>
 
     <EditText
-        android:id="@+id/dateEntry"
+        android:id="@+id/dayEntry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView1"
