Commiting to pull, disregard

--- a/Android_App/Potato/res/layout/activity_gen_report.xml
+++ b/Android_App/Potato/res/layout/activity_gen_report.xml
@@ -7,49 +7,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".GenReportActivity" >
-
-    <EditText
-        android:id="@+id/editText1"
+    
+    <TableLayout
+        android:id="@+id/TBL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="150dp"
-        android:ems="10"
-        android:hint="mm/dd/yyyy"
-        android:inputType="date" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Starting Date:"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
-        android:ems="10"
-        android:hint="mm/dd/yyyy"
-        android:inputType="date" >
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/editText2"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_marginBottom="14dp"
-        android:text="Ending Date:"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+        
+   	</TableLayout>
 
 </RelativeLayout>
