--- a/Potato/Mrs_Potato/res/layout/activity_profile_.xml
+++ b/Potato/Mrs_Potato/res/layout/activity_profile_.xml
@@ -9,22 +9,43 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Profile_Activity" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42dp"
-        android:onClick="onAddAccount"
-        android:text="@string/String_AddNewAccount" />
-
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_above="@+id/button1"
+        android:layout_alignRight="@+id/button3"
+        android:layout_below="@+id/button3" >
+
     </ListView>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="onGenerateSpendingReport"
+        android:text="@string/String_GenerateSpendingReport" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:onClick="onAddAccount"
+        android:text="@string/String_AddNewAccount" />
+
+    <Button
+        android:id="@+id/button3"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:height="1sp"
+        android:onClick="onLogOut"
+        android:text="@string/String_LogOut" />
 
 </RelativeLayout>
